--- a/index.html
+++ b/index.html
@@ -25,36 +25,7 @@
             <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
-            <div class="element">
-                <img src="images/el1.jpg" alt="Карачаевск" class="element__photo">
-                <h2 class="element__title">Карачаевск</h2>
-                <button type="button" class="element__like"></button>
-            </div>
-            <div class="element">
-                <img src="images/el2.jpg" alt="Гора Эльбрус" class="element__photo">
-                <h2 class="element__title">Гора Эльбрус</h2>
-                <button type="button" class="element__like"></button>
-            </div>
-            <div class="element">
-                <img src="images/el3.jpg" alt="Домбай" class="element__photo">
-                <h2 class="element__title">Домбай</h2>
-                <button type="button" class="element__like"></button>
-            </div>
-            <div class="element">
-                <img src="images/el2.jpg" alt="Гора Эльбрус" class="element__photo">
-                <h2 class="element__title">Гора Эльбрус</h2>
-                <button type="button" class="element__like"></button>
-            </div>
-            <div class="element">
-                <img src="images/el3.jpg" alt="Домбай" class="element__photo">
-                <h2 class="element__title">Домбай</h2>
-                <button type="button" class="element__like"></button>
-            </div>
-            <div class="element">
-                <img src="images/el1.jpg" alt="Карачаево-Черкесская Республика" class="element__photo">
-                <h2 class="element__title">Карачаево-Черкесская Республика</h2>
-                <button type="button" class="element__like"></button>
-            </div>
+
         </section>
 
     </main>
@@ -62,11 +33,11 @@
         <p>&copy; 2022 Mesto Russia</p>
     </footer>
 
-    <!-- The Modal -->
-    <div id="modal" class="modal">
+    <!-- The Modal for edit profile-->
+    <div id="modal" class="modal modal_type_edit">
         <div class="modal__form">
-            <button class="modal__close" type="button"></button>
-            <form class="form" name="edit_form">
+            <button class="modal__close modal__close_edit" type="button"></button>
+            <form class="form form_edit" name="edit_form">
                 <h3 class="form__title">Редактировать профиль</h3>
                 <input id="name" type="text" name="name" class="form__input form__input_type_name">
                 <input id="about" type="text" name="about" class="form__input form__input_type_about">
@@ -74,7 +45,41 @@
             </form>
         </div>
     </div>
+    <!-- The Modal ends -->
+    <!-- The Modal for add new card-->
+    <div id="modal_add_card" class="modal modal_type_add">
+        <div class="modal__form">
+            <button class="modal__close modal__close_add" type="button"></button>
+            <form class="form form_add" name="edit_form">
+                <h3 class="form__title">Новое место</h3>
+                <input id="place_name" type="text" name="name" class="form__input form__input_type_placename" placeholder="Название">
+                <input id="link" type="text" name="about" class="form__input form__input_type_link" placeholder="Ссылка на картинку">
+                <button type="submit" class="form__submit-button">Создать</button>
+            </form>
+        </div>
+    </div>
+    <!-- The Modal ends -->
+    <!-- The Modal for photo-->
+    <div id="modal_photo" class="modal modal_type_photo">
+        <div class="modal__conteiner">
+            <button class="modal__close modal__close_photo" type="button"></button>
+            <img src="#" class="modal__photo">
+            <p class="modal__title"></p>
+        </div>
+    </div>
+    <!-- The Modal ends -->
 </div>
+<template class="element_template">
+    <div class="element">
+        <img src="" alt="" class="element__photo">
+        <button type="button" class="element__delete"></button>
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like"></button>
+    </div>
+</template>
+
+
+
 <script src="scripts/script.js"></script>
 </body>
 </html>
