index.html corrected

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 <template class="element_template">
     <div class="element">
-        <img src="" alt="" class="element__photo">
+        <img src="#" alt="" class="element__photo">
         <button type="button" class="element__delete"></button>
         <h2 class="element__title"></h2>
         <button type="button" class="element__like"></button>
