Corrected after 1 review

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="modal_add_card" class="modal modal_type_add">
         <div class="modal__form">
             <button class="modal__close modal__close_add" type="button"></button>
-            <form class="form form_add" name="edit_form">
+            <form class="form form_add" name="add_form">
                 <h3 class="form__title">Новое место</h3>
                 <input id="place_name" type="text" name="name" class="form__input form__input_type_placename" placeholder="Название">
                 <input id="link" type="text" name="about" class="form__input form__input_type_link" placeholder="Ссылка на картинку">
