--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
             <button class="modal__close modal__close_edit" type="button"></button>
             <form class="form form_edit" name="edit_form">
                 <h3 class="form__title">Редактировать профиль</h3>
-                <input id="name" type="text" name="name" class="form__input form__input_type_name">
-                <input id="about" type="text" name="about" class="form__input form__input_type_about">
-                <button type="submit" class="form__submit-button">Сохранить</button>
+                <input id="name" type="text" name="name" class="form__input form__input_type_name" required minlength="2" maxlength="40">
+                <span class="form__input-error" id="name-error"></span>
+                <input id="about" type="text" name="about" class="form__input form__input_type_about" required minlength="2" maxlength="200">
+                <span class="form__input-error" id="about-error"></span>
+
+                <button type="submit" class="form__submit-button" >Сохранить</button>
             </form>
         </div>
     </div>
@@ -52,9 +55,11 @@
             <button class="modal__close modal__close_add" type="button"></button>
             <form class="form form_add" name="add_form">
                 <h3 class="form__title">Новое место</h3>
-                <input id="place_name" type="text" name="name" class="form__input form__input_type_placename" placeholder="Название">
-                <input id="link" type="text" name="about" class="form__input form__input_type_link" placeholder="Ссылка на картинку">
-                <button type="submit" class="form__submit-button">Создать</button>
+                <input id="place_name" type="text" name="name" class="form__input form__input_type_placename" placeholder="Название" required minlength="2" maxlength="30">
+                <span class="form__input-error" id="place_name-error"></span>
+                <input id="link" type="url" name="about" class="form__input form__input_type_link" placeholder="Ссылка на картинку" required>
+                <span class="form__input-error" id="link-error"></span>
+                <button type="submit" class="form__submit-button form__submit-button_disabled" disabled>Создать</button>
             </form>
         </div>
     </div>
@@ -79,7 +84,7 @@
 </template>
 
 
-
+<script src="scripts/validate.js" defer></script>
 <script src="scripts/script.js"></script>
 </body>
 </html>
