--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </template>
 
 
-<script src="scripts/validate.js" defer></script>
+<script src="scripts/validate.js"></script>
 <script src="scripts/script.js"></script>
 </body>
 </html>
