--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
     <title>Mesto</title>
+    <script src="scripts/index.js" type="module"></script>
 </head>
 
 <body class="root">
@@ -84,7 +85,7 @@
 </template>
 
 
-<script src="scripts/validate.js"></script>
-<script src="scripts/script.js"></script>
+
+
 </body>
 </html>
