fix: mistakes corrected after 1 review

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <!-- The Modal ends -->
     <!-- The Modal for photo-->
-    <div id="modal_photo" class="modal modal_type_photo">
+    <div id="modal_photo" class="modal modal_type_photo modal_show-img">
         <div class="modal__conteiner">
             <button class="modal__close modal__close_photo" type="button"></button>
             <img src="#" class="modal__photo">
