--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
     <title>Mesto</title>
-    <script src="scripts/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </head>
 
 <body class="root">
 <div class="page">
     <header class="header">
-        <img src="images/logo.svg" alt="Логотип" class="header__logo">
+        <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
 
     </header>
     <main class="content">
         <section class="profile">
-            <img src="images/avatar.jpg" alt="Аватар" class="profile__avatar">
+            <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <button type="button" class="profile__edit-button"></button>
@@ -58,7 +58,7 @@
                 <h3 class="form__title">Новое место</h3>
                 <input id="place_name" type="text" name="name" class="form__input form__input_type_placename" placeholder="Название" required minlength="2" maxlength="30">
                 <span class="form__input-error" id="place_name-error"></span>
-                <input id="link" type="url" name="about" class="form__input form__input_type_link" placeholder="Ссылка на картинку" required>
+                <input id="link" type="url" name="link" class="form__input form__input_type_link" placeholder="Ссылка на картинку" required>
                 <span class="form__input-error" id="link-error"></span>
                 <button type="submit" class="form__submit-button form__submit-button_disabled" disabled>Создать</button>
             </form>
