--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,20 @@
     </header>
     <main class="content">
         <section class="profile">
-            <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar">
+
+
+            <div class="profile__avatar-container">
+                <div class="profile__avatar-icon">
+                    <button class="profile__avatar-edit" type="button" aria-label="Иконка карандаша"></button>
+                </div>
+                <img class="profile__avatar" alt="Фото профиля" />
+            </div>
+
+
             <div class="profile__info">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <h1 class="profile__name"></h1>
                 <button type="button" class="profile__edit-button"></button>
-                <p class="profile__about">Исследователь океана</p>
+                <p class="profile__about"></p>
             </div>
             <button class="profile__add-button" type="button"></button>
         </section>
@@ -43,6 +52,21 @@
                 <span class="form__input-error" id="name-error"></span>
                 <input id="about" type="text" name="about" class="form__input form__input_type_about" required minlength="2" maxlength="200">
                 <span class="form__input-error" id="about-error"></span>
+
+                <button type="submit" class="form__submit-button" >Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <!-- The Modal ends -->
+    <!-- The Modal for edit profile-->
+    <div id="modal_edit_photo" class="modal modal_type_edit_avatar">
+        <div class="modal__form">
+            <button class="modal__close modal__close_edit" type="button"></button>
+            <form class="form form_edit-avatar" name="edit-avatar_form">
+                <h3 class="form__avatar-link">Обновить аватар</h3>
+                <input id="avatar_link" type="url" name="avatar" class="form__input form__input_type_avatar-link" placeholder="Ссылка на аватар" required >
+                <span class="form__input-error" id="avatar_link-error"></span>
+
 
                 <button type="submit" class="form__submit-button" >Сохранить</button>
             </form>
@@ -73,13 +97,28 @@
         </div>
     </div>
     <!-- The Modal ends -->
+    <!-- The Modal for delete-->
+    <div id="modal_delete" class="modal modal_type_delete">
+        <div class="modal__form">
+            <button class="modal__close" type="button"></button>
+            <form class="form form_delete" name="add_delete">
+                <h3 class="form__question">Вы уверены?</h3>
+
+                <button type="submit" class="form__submit-button">Да</button>
+            </form>
+        </div>
+    </div>
+    <!-- The Modal ends -->
 </div>
 <template class="element_template">
     <div class="element">
         <img src="#" alt="" class="element__photo">
         <button type="button" class="element__delete"></button>
         <h2 class="element__title"></h2>
-        <button type="button" class="element__like"></button>
+        <div class="element__likes">
+            <button type="button" class="element__like"></button>
+            <p class="element__like-amount">0</p>
+        </div>
     </div>
 </template>
 
