--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     </div>
     <!-- The Modal ends -->
     <!-- The Modal for edit profile-->
-    <div id="modal_edit_photo" class="modal modal_type_edit_avatar">
+    <div id="modal_edit_photo" class="modal modal_type_edit-avatar">
         <div class="modal__form">
             <button class="modal__close modal__close_edit" type="button"></button>
             <form class="form form_edit-avatar" name="edit-avatar_form">
